<resources>
    <string name="app_name" translatable="false">DriveSmart</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password_again">Enter your password again</string>
    <string name="forgot_password_text">Provide your account’s email\n for which you want to reset password</string>
    <string name="reset_password">Reset password</string>
    <string name="hello">Hello</string>
    <string name="start_driving">Start driving</string>
    <string name="my_journeys">My journeys</string>
    <string name="settings">Settings</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="passwords_dont_match">The passwords don\'t match</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_logout">Are you sure you want to log out?</string>
    <string name="empty_email">Fill in the email address</string>
    <string name="check_email">Check your email to reset the password</string>
    <string name="problem">There was a problem</string>
    <string name="logout">Logout</string>
    <string name="pedestrian_crossing_warning">Attention! Pedestrian crossing ahead</string>
    <string name="pedestrian_crossing">Pedestrian crossing</string>
    <string name="give_way">Attention! Give way</string>
    <string name="stop">Attention! You have to stop</string>
    <string name="priority_road">You are on a priority road</string>
    <string name="roundabout">Roundabout</string>
    <string name="roundabout_warning">Attention! Roundabout ahead</string>
    <string name="speed_limit_30">The speed limit is 30 kilometers per hour</string>
    <string name="speed_limit_50">The speed limit is 50 kilometers per hour</string>
    <string name="speed_limit_60">The speed limit is 60 kilometers per hour</string>
    <string name="speed_limit_70">The speed limit is 70 kilometers per hour</string>
    <string name="speed_limit_80">The speed limit is 80 kilometers per hour</string>
    <string name="speed_limit_90">The speed limit is 90 kilometers per hour</string>
    <string name="dangerous_curve_left">Dangerous curve to the left</string>
    <string name="dangerous_curve_right">Dangerous curve to the right</string>
    <string name="right_bend">Road bends to the right</string>
    <string name="left_bend">Road bends to the left\n</string>
    <string name="double_curve">Double curve ahead</string>
    <string name="road_narrows">Road narrows ahead</string>
    <string name="road_narrows_left">Road narrows on the left side</string>
    <string name="road_narrows_right">Road narrows on the right side</string>
    <string name="undefined">Undefined announcement</string>
    <string name="stop_driving">Finish journey</string>
    <string name="finish_trip_confirm">Do you really want to finish the journey?</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="get_location_error">Could not get your location</string>
    <string name="confirm_new_trip">Confirm new trip</string>
    <string name="new_trip_message">Are you sure you want to start a new journey?</string>
    <string name="journey">Journey</string>
    <string name="name">Name</string>
    <string name="start">From</string>
    <string name="end">To</string>
    <string name="duration">Duration</string>
    <string name="undefined_name">undefined</string>
    <string name="deleted_journey">This journey has been successfully deleted!</string>
    <string name="confirm_delete_journey">Confirm delete</string>
    <string name="delete_trip_message">Are you sure you want to delete this journey?</string>
    <string name="failed_item_delete">Failed to delete this journey</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_journey_name">Edit journey name</string>
    <string name="edit_journey_name_message">Enter here a new name for this journey</string>
    <string name="password_rules">The password should contain at least 8 characters, at least one digit, at least one uppercase letter, at least one lowercase letter and at least one special character</string>
    <string name="weak_password">Weak password</string>
    <string name="error_occurred">An error occurred</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="verify_email_first">You must validate your email address first</string>
    <string name="email_verified">Your email address has been successfully validated</string>
    <string name="edit_profile">Edit profile</string>
    <string name="configure_traffic_alerts">Traffic alerts</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="register_date">Account creation</string>
    <string name="last_login">Last login</string>
    <string name="edit_username">Edit username</string>
    <string name="edit_username_message">Enter here your new username</string>
    <string name="change_email">Change email</string>
    <string name="change_email_message">Enter here your new email address</string>
    <string name="email_already_used">This email address is already used</string>
    <string name="changed_email_1">Please validate your new email address</string>
    <string name="changed_email_2">Without verification, you won\'t be able to log in next time!</string>
    <string name="invalid_username">Username should have max 10 characters and no spaces</string>
    <string name="long_press_edit">Long press to edit username and change email address</string>
    <string name="validate_email">Validate your email address</string>
    <string name="long_press_delete_journey">Long press to delete a journey</string>
    <string name="long_press_edit_journey_name">Long press to edit the journey name</string>
    <string name="change_password">Change password</string>
    <string name="change_password_message">Enter here your new password</string>
    <string name="current_password">Current password</string>
    <string name="current_password_message">Enter here your current password</string>
    <string name="password_successfully_updated">Your password has been successfully updated</string>
    <string name="failed_password_update">Failed password update</string>
    <string name="failed_reauthentication">Your re-authentication has failed</string>
    <string name="traffic_signs_announced">Choose which of the following traffic signs should be announced</string>
    <string name="long_press_change_sign_status">Long press on an item to enable / disable the alert</string>
    <string name="confirm_enable_sign">Are you sure you want to enable the alert for this traffic sign?</string>
    <string name="confirm_disable_sign">Are you sure you want to disable the alert for this traffic sign?</string>
    <string name="enable">Enable alert</string>
    <string name="disable">Disable alert</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="gps_permission_denied">GPS permission denied</string>
    <string name="date">Date</string>
    <string name="camera_permission_settings">Enable camera permissions from the settings menu</string>
    <string name="location_permission_settings">Enable location permissions from the settings menu</string>

    <string name="pedestrian_crossing_sign">Pedestrian crossing</string>
    <string name="pedestrian_crossing_warning_sign">Pedestrian crossing warning</string>
    <string name="roundabout_sign">Roundabout</string>
    <string name="roundabout_warning_sign">Roundabout warning</string>
    <string name="priority_road_sign">Priority road</string>
    <string name="stop_sign">Stop</string>
    <string name="give_way_sign">Give way</string>
    <string name="speed_limit_30_sign">Speed limit 30 km/h</string>
    <string name="speed_limit_50_sign">Speed limit 50 km/h</string>
    <string name="speed_limit_60_sign">Speed limit 60 km/h</string>
    <string name="speed_limit_70_sign">Speed limit 70 km/h</string>
    <string name="speed_limit_80_sign">Speed limit 80 km/h</string>
    <string name="speed_limit_90_sign">Speed limit 90 km/h</string>
    <string name="double_curve_sign">Double curve</string>
    <string name="dangerous_curve_left_sign">Dangerous curve left</string>
    <string name="dangerous_curve_right_sign">Dangerous curve right</string>
    <string name="left_bend_sign">Road bends to left</string>
    <string name="right_bend_sign">Road bends to right</string>
    <string name="road_narrows_sign">Road narrows</string>
    <string name="road_narrows_left_sign">Road narrows on left</string>
    <string name="road_narrows_right_sign">Road narrows on right</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_language">Change language</string>
    <string name="restart_app">Restart the app to apply the changes</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="view_google_maps" translatable="false">View on Google Maps</string>
    <string name="english">English</string>
    <string name="romanian">Romanian</string>
    <string name="detect_traffic_signs">Detect traffic signs</string>
    <string name="make_turn_prediction">Make turn prediction</string>
    <string name="select_model">Choose the mode</string>
    <string name="left">Curve to the left</string>
    <string name="right">Curve to the right</string>
    <string name="straight">Straight road</string>
</resources>